--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="styles.css">
 		
 		
 		
@@ -40,26 +40,34 @@
 					<button class="operator" id="backspace">CE</button>
 					<button class="operator" id="%">%</button>
 					<button class="operator" id="/">&#247;</button>
+					<br>
 					<button class="number" id="10">10</button>
 					<button class="number" id="11">11</button>
 					<button class="number" id="12">12</button>
-					<button class="operator" id="%">&percentage;</button>
+					<br>
 					<button class="number" id="7">7</button>
 					<button class="number" id="8">8</button>
 					<button class="number" id="9">9</button>
-					<button class="operator" id="*">&times;</button>
+					<br>
+					
 					<button class="number" id="4">4</button>
 					<button class="number" id="5">5</button>
 					<button class="number" id="6">6</button>
-					<button class="operator" id="-">-</button>
+					<br>
+					
 					<button class="number" id="1">1</button>
 					<button class="number" id="2">2</button>
 					<button class="number" id="3">3</button>
-					<button class="operator" id="+">+</button>
-					<button class="empty" id="empty"></button>
+					<br>
+					<button class="number"></button>
 					<button class="number" id="0">0</button>
+					<button class="number" ></button>
 					<button class="empty" id="empty"></button>
+					<button class="operator" id="+">+</button>
 					<button class="operator" id="=">=</button>
+					<button class="operator" id="*">&times;</button>
+					<button class="operator" id="%">&percentage;</button>
+					<button class="operator" id="-">-</button>
 				</div>
 			</div>
 		</div>
