DID SOME FORMATTING

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		
 		<title>A simple calculator</title>
 	</head>
-	<body> 
+	<body text="red" bgcolor="black"> 
 		<nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Logo</a>
@@ -63,6 +63,7 @@
 				</div>
 			</div>
 		</div>
-		<p id="great">MADE BY: HIMANSHU PATHAK</p>
+		<p id="great"><b><i><u><font color="yellow"MADE BY: HIMANSHU PATHAK</font></u></i></b></p>
 		<script src="work.js"></script>
 	</body>
+</html>
