corrected some errors

--- a/work.html
+++ b/work.html
@@ -2,10 +2,10 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <title><strong> A Simple Calculator</strong></title>
-    <p>A basic calculator that helps you solve basic problems like addition, subtraction, multiplication etc.</p>
+    <title> A Simple Calculator </title>
 </head>
 <body>
+     <p>A basic calculator that helps you solve basic problems like addition, subtraction, multiplication etc.</p>
     <div id="container" >
         <div id="calculator">
             <div id="history">
